<?xml version="1.0" encoding="utf-8"?>
<!--
/*
 * Copyright (c) 2012 Kirk Zurell
 *
 * See the file LICENSE for copying permission.
 */
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/preferencesGeneralTitle" >

    <PreferenceCategory
        android:summary="@string/postcategorysummary"
        android:title="@string/postcategorytitle" >
        <CheckBoxPreference
            android:key="@string/postpreferencekey"
            android:summary="@string/postpreferencesummary"
            android:title="@string/postpreferencetitle" />

        <EditTextPreference
            android:key="@string/postTargetURLkey"
            android:summary="@string/postTargetSummary"
            android:title="@string/postTargetTitle" />
    </PreferenceCategory>

</PreferenceScreen>